feat: adicionando os verbos http GET, PUT e DELETE na documentação Swagger.
